[project]
name = "langgraph-campusx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
